# paperbot

./: .gitignore  AGENTS.md  CLAUDE.md  Info.plist  LICENSE  Package.swift  README.md  REBUILD.md  build-app.sh  pyproject.toml
.claude/plans/: jazzy-nibbling-micali.md
Sources/VellumX/: DeepSeekTranslator.swift  PaperStore.swift  VenueScorer.swift
app/: .gitignore  AGENTS.md  Info.plist  Makefile  Package.swift  build-app.sh  make-dmg.sh
app/Resources/: VellumX.icns
app/app/: build-app.sh
app/docs/: ARCHITECTURE.md  BUILDING.md  RELEASE.md
app/scripts/: build.sh  check.sh  clean.sh  log.sh  package-dmg.sh  test.sh
data/: config.json  config.json.example  papers.json
docs/: ARCHITECTURE.md
scripts/: backfill_venue_abbr.py  build.sh  cleanup-deprecated-db-fields.sh  migrate_pending.py  refresh-db-schema.sh  restart.sh
server/: .gitignore  pyproject.toml
server/tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_db.py  test_fetch.py  test_mail.py  test_models.py  test_recommend.py  test_version.py
skill/: SKILL.md
skill/examples/: config.example.json  papers.sample.json
skill/references/: openalex.md  scoring.md
skill/scripts/: common.py  fetch.py  recommend.py
src/paperbot/: __init__.py  audit.py  cli.py  config.py  dashboard.py  db.py  fetch.py  mail.py  models.py  pdf_resolver.py  recommend.py  update.py  (+3 more)
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_fetch.py  test_mail.py  test_models.py  test_pdf_resolver.py  test_recommend.py  test_stop_server.py  test_translate.py  test_utils.py
(+112 files in other folders)
