[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperbot"
version = "0.3.0"
description = "PaperBot — daily paper recommendation for researchers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
paperbot = "paperbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paperbot"]

[tool.ruff]
line-length = 100
